--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 0.989009 2023-06-21
-  
+  [Incompatibe Changes]
+    * The following Native Runtime APIs were changed.
+      - void* (*get_field)(void* runtime, void* basic_type, int32_t field_index);
+      - void* (*get_class_var)(void* runtime, void* basic_type, int32_t class_var_index);
+      - void* (*get_method)(void* runtime, void* basic_type, int32_t method_index);
+      + void* (*get_field)(void* runtime, int32_t basic_type_id, int32_t field_index);
+      + void* (*get_class_var)(void* runtime, int32_t basic_type_id, int32_t class_var_index);
+      + void* (*get_method)(void* runtime, int32_t basic_type_id, int32_t method_index);
 0.989008 2023-06-20
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
