--- a/Changes
+++ b/Changes
@@ -9,6 +9,10 @@
       + void* (*get_method)(void* runtime, int32_t basic_type_id, int32_t method_index);
   [New Features]
     * The following Native Runtime APIs were added.
+    
+      void* (*get_instance_method)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, const char* method_name);
+      
+    * The following Native Runtime APIs were added.
 
       void* (*get_class_var_by_name)(void* runtime, int32_t basic_type_id, const char* class_var_name);
       void* (*get_field_by_name)(void* runtime, int32_t basic_type_id, const char* field_name);
