--- a/Changes
+++ b/Changes
@@ -10,6 +10,9 @@
       
       -  int32_t (*get_method_is_static)(void* runtime, void* method);
       +  int32_t (*get_method_is_class_method)(void* runtime, void* method);
+      
+      -  void* (*get_basic_type_by_id)(void* runtime, int32_t basic_type_id);
+      +  void* (*get_basic_type)(void* runtime, int32_t basic_type_id);
 
   [New Features]
     * The following Native Runtime APIs were added.
