The following Native Runtime APIs were added.
  [New Features]
    * The following Native Runtime APIs were added.
      int32_t (*get_method_address_id)(void* runtime, void* method);

--- a/Changes
+++ b/Changes
@@ -25,7 +25,8 @@
 
       void* (*get_class_var_by_name)(void* runtime, int32_t basic_type_id, const char* class_var_name);
       void* (*get_field_by_name)(void* runtime, int32_t basic_type_id, const char* field_name);
-      void* (*get_method_by_name)(void* runtime, int32_t basic_type_id, const char* method_name);0.989008 2023-06-20
+      void* (*get_method_by_name)(void* runtime, int32_t basic_type_id, const char* method_name);
+      int32_t (*get_method_address_id)(void* runtime, void* method);
   
 0.989008 2023-06-20
   [Incompatibe Changes]
