The following Native Runtime APIs were removed.
  [Incompatibe Changes]
    * The following Native Runtime APIs were removed.
      - int32_t (*get_method_address_id_by_name)(void* runtime, const char* basic_type_name, const char* method_name);

--- a/Changes
+++ b/Changes
@@ -15,6 +15,7 @@
       +  void* (*get_basic_type)(void* runtime, int32_t basic_type_id);
     * The following Native Runtime APIs were removed.
       - int32_t (*get_method_address_id_by_index)(void* runtime, int32_t basic_type_id, int32_t method_index);
+      - int32_t (*get_method_address_id_by_name)(void* runtime, const char* basic_type_name, const char* method_name);
 
   [New Features]
     * The following Native Runtime APIs were added.
