--- a/Changes
+++ b/Changes
@@ -28,7 +28,7 @@
       void* (*get_field_by_name)(void* runtime, int32_t basic_type_id, const char* field_name);
       void* (*get_method_by_name)(void* runtime, int32_t basic_type_id, const char* method_name);
       int32_t (*get_method_address_id)(void* runtime, void* method);
-  
+      int32_t (*get_method_index)(void* runtime, void* method);  
 0.989008 2023-06-20
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
