--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.989010 2023-06-22
+  [New Features]
+    * The following Native Runtime APIs were added.
+      +int32_t SPVM_API_RUNTIME_get_class_var_address_id(SPVM_RUNTIME* runtime, SPVM_RUNTIME_METHOD* class_var);
+      +int32_t SPVM_API_RUNTIME_get_class_var_index(SPVM_RUNTIME* runtime, SPVM_RUNTIME_METHOD* class_var);
+      +int32_t SPVM_API_RUNTIME_get_field_address_id(SPVM_RUNTIME* runtime, SPVM_RUNTIME_METHOD* field);
+      +int32_t SPVM_API_RUNTIME_get_field_index(SPVM_RUNTIME* runtime, SPVM_RUNTIME_METHOD* field);
+
 0.989009 2023-06-21
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
