--- a/Changes
+++ b/Changes
@@ -12,6 +12,34 @@
     * The beheivior of the following Native APIs were deprecated and will be replaced with version 2 APIs.
       +  void* (*new_stack_trace_raw)(SPVM_ENV* env, SPVM_VALUE* stack, void* exception, int32_t method_address_id, int32_t line);
       +  void* (*new_stack_trace)(SPVM_ENV* env, SPVM_VALUE* stack, void* exception, int32_t method_address_id, int32_t line);
+  [Incompatibe Changes]
+    * The following Native Runtime APIs were changed.
+      -  int32_t (*get_basic_type_name_id)(void* runtime, void* basic_type);
+      +  int32_t (*get_basic_type_name_id)(void* runtime, int32_t basic_type_id);
+      -  int32_t (*get_basic_type_category)(void* runtime, void* basic_type);
+      +  int32_t (*get_basic_type_category)(void* runtime, int32_t basic_type_id);
+      -  int32_t (*get_basic_type_module_rel_file_id)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_module_dir_id)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_is_anon)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_fields_base_address_id)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_fields_length)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_methods_base_address_id)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_methods_length)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_class_vars_base_address_id)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_class_vars_length)(void* runtime, void* basic_type);
+      +  int32_t (*get_basic_type_module_rel_file_id)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_module_dir_id)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_is_anon)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_fields_base_address_id)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_fields_length)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_methods_base_address_id)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_methods_length)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_class_vars_base_address_id)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_class_vars_length)(void* runtime, int32_t basic_type_id);
+      -  int32_t (*get_basic_type_parent_id)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_version_string_id)(void* runtime, void* basic_type);
+      +  int32_t (*get_basic_type_parent_id)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_version_string_id)(void* runtime, int32_t basic_type_id);
     
 0.989009 2023-06-21
   [Incompatibe Changes]
