--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     * The following Native Runtime APIs were removed.
     
       int32_t (*get_field_address_id_by_index)(void* runtime, int32_t basic_type_id, int32_t field_index);
+      int32_t (*get_field_address_id_by_name)(void* runtime, const char* basic_type_name, const char* field_name);
     
 0.989010 2023-06-22
   [New Features]
