--- a/Changes
+++ b/Changes
@@ -4,7 +4,7 @@
     
       int32_t (*get_field_address_id_by_index)(void* runtime, int32_t basic_type_id, int32_t field_index);
       int32_t (*get_field_address_id_by_name)(void* runtime, const char* basic_type_name, const char* field_name);
-    
+    * The length of the merged fields in a class must be lower than 65535.
 0.989010 2023-06-22
   [New Features]
     * The following Native Runtime APIs were added.
