--- a/Changes
+++ b/Changes
@@ -5,7 +5,15 @@
       void* object_flag_offset;
       void* object_weaken_backref_head;
       void* object_basic_type_id_offset;
+      void* object_type_dimension_offset;
       
+    * The following Native Runtime APIs were removed.
+      
+      void* object_flag_offset;
+      void* object_weaken_backref_head;
+      void* object_basic_type_id_offset;
+      void* object_type_dimension_offset;
+    
 0.989013 2023-06-26
   [New Features]
     * The following methods were added.
