--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
       void* object_basic_type_id_offset;
       void* object_type_dimension_offset;
       void* object_length_offset;
+      void* object_header_size;
       
     * The following Native Runtime APIs were removed.
       
